syntax = "proto2";

option csharp_namespace = "Protoplazr";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  required string name = 1;
}

message PayloadItem {
	required int32 id = 1;
	required string message = 2;
	required bool isEnabled = 3;
	optional double precision = 4 [default = 0.0];
}
// The response message containing the greetings.
message HelloReply {
  required string message = 1;
  repeated PayloadItem items = 2;
}
